Se agrega las clases jumbotron, container, row y col

--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <div class="jumbotron">
+		<div class="container">
+			<div class="row">
+			    <div class="col-sm">
+			    	<h1>Bienvenidos</h1>
+					<p>Esperemos que encuentres el hotel adecuado para ti.</p>
+			    </div>
+			    <div class="col-sm">
+			      	<h2>Acerca</h2>
+					<p>Esta es una pequeña empresa que recopila información de los mejores hoteles en diferentes lugares.</p>
+			    </div>
+			    <div class="col-sm">
+			      	<h2>Terminos y condiciones</h2>
+					<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
+			    </div>
+		  	</div>
+			<p><a class="btn btn-primary btn-lg" role="button">Hoteles</a></p>
+		</div>
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
