--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
      <!-- Forma referenciada desde la CDN -->
      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+     <!-- Para que haga uso de los estilos propios se agrega como cualquier hoja de estilo-->
+     <link rel="stylesheet" href="/css/main.css">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" >
+    <title>Guia Hoteles</title>
   </head>
   <body>
 
+  	
+  	<!--
     <div class="jumbotron">
 		<div class="container">
 			<div class="row">
@@ -29,12 +34,110 @@
 			    </div>
 			    <div class="col-sm">
 			      	<h2>Terminos y condiciones</h2>
-					<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
+				<div>	<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
 			    </div>
-		  	</div>
-			<p><a class="btn btn-primary btn-lg" role="button">Hoteles</a></p>
+		  		<p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
 		</div>
 	</div>
+	-->
+
+	<!--Utilizando Flex -->
+    <div class="jumbotron">
+		<h1>Hoteles</h1>
+	</div>
+	<div class="container">
+		<div class="row">
+		    <div class="col-sm">
+		    	<h2>Bienvenidos</h2>
+				<p>Esperemos que encuentres el hotel adecuado para ti. Solo recomendamos los hoteles</p>
+		    </div>
+		    <div class="col-sm">
+		      	<h2>Acerca</h2>
+				<p>Esta es una pequeña empresa que recopila información de los mejores hoteles en diferentes lugares.</p>
+		    </div>
+		    <div class="col-sm">
+		      	<h2>Terminos y condiciones</h2>
+				<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
+		    </div>
+	  	</div>
+		
+		<div class="d-flex flex-wrap">
+			<!-- flex-wrap lo que hace es ajustar los elementos que vamos teniendo dentro del ancho del contenedor.-->
+		    <div class="card-hotel">
+		    	<div><h3>Hotel Sanata Barbara</h3>
+				<p>Ubicado cerca de la ciudad de Medellín</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		    <div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel la Pintada</h3>
+				<p>Cerca la via Medellín - Cali</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		    <div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel Buena Aventura</h3>
+				<p>Cuenta con la mejor gastronomia</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		   	<div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel Barcelona</h3>
+				<p>Te sorprendera su arquitectura</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		   	<div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel San Pedro</h3>
+				<p>Encontraras las mejores fiestas</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		   	<div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel Rio de Janeiro</h3>
+				<p>Descubre la diversidad en los avarios</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+		   	<div class="card-hotel d-flex flex-column justify-content-between">
+		      	<div><h3>Hotel La estrella</h3>
+				<p>Conectate con la naturaleza</p></div>
+		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
+		    </div>
+	  	</div>
+
+	</div>
+
+
+	<footer class="page-footer font-small pt-4">
+
+		<div class="container">
+			<ul class="list-unstyled list-inline text-center">
+			  <li class="list-inline-item">
+			    <a class="btn-floating btn-fb mx-1" href="https://facebook.com/">
+			      <i class="fab fa-facebook-f"> </i>
+			    </a>
+			  </li>
+			  <li class="list-inline-item">
+			    <a class="btn-floating btn-tw mx-1" href="https://twitter.com/">
+			      <i class="fab fa-twitter"> </i>
+			    </a>
+			  </li>
+
+			</ul>
+
+			<div class="row justify-content-between">
+					<div class="col-4">
+						<h3>Calificanos</h3>
+						<p>Recibimos sus sugerencias al correo soporte@todos.com.co</p>
+					</div>
+					<div class="col-4">
+						<h3>Oficina central</h3>
+						<p>Peru</p>
+						<p>0180003333333</p>
+						<p>hola@espero.esten.bien</p>
+					</div>
+				</div>
+
+		</div>
+		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+			<a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+		</div>
+	</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
