--- a/contacto.html
+++ b/contacto.html
@@ -55,18 +55,68 @@
 		<nav aria-label="breadcrumb">
   			<ol class="breadcrumb">
     			<li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-    			<li class="breadcrumb-item active" aria-current="page">Nosotros</li>
+    			<li class="breadcrumb-item active" aria-current="page">Contactanos</li>
   			</ol>
 		</nav>
 
-		<samp>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</samp>
+		<h1>Deja tu comentario</h1>
+
+		<!--Creación del formulario -->
+		<form>			
+			<div class="form-row">
+			    <div class="form-group col-sm-6">
+			      <label for="nombre">Nombre</label>
+			      <!--En el for debe de ir el id del input para asociarlos -->
+			      <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+			    </div>
+			    <div class="form-group col-sm-6">
+			      <label for="apellido">Apellido</label>
+			      <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+			    </div>
+			</div>
+			<div class="form-group">
+				<label for="email">Email</label>
+					<input type="text" class="form-control" id="email" placeholder="Ingrese su email">
+			</div>
+			<div class="form-row">
+			    <div class="form-group col-sm-9">
+			      <label for="direccion">Dirección</label>
+			      <input type="text" class="form-control" id="direccion" placeholder="Ingrese su dirección">
+			    </div>
+			    <div class="form-group col-sm-3">
+			      <label for="departamento">Departamento</label>
+			      <select id="departamento" class="form-control">
+					<option selected>Amazonas</option>
+			      	<option>Antioquia</option>
+			      	<option>Arauca</option>
+			      	<option>Atlántico</option>
+			      	<option>Bolívar</option>
+			      	<option>Boyacá</option>
+			      	<option>Caldas</option>
+			      </select>
+			    </div>
+			</div>
+			<div class="form-group">
+				<label for="comentario">Comentario</label>
+				<textarea id="comentario" class="form-control" rows="10"></textarea>
+			</div>
+			<div class="form-group">
+			    <div class="form-check">
+			      <input class="form-check-input" type="checkbox" id="gridCheck">
+			      <label class="form-check-label" for="gridCheck">
+			        Quiero que me contacten
+			      </label>
+			    </div>
+			</div>
+			<div class="form-group">
+				<button type="submit" class="btn btn-primary">Enviar</button>
+			</div>
+
+		</form>
+
 	</div>
+
+
 
 	<footer class="page-footer font-small pt-4">
 
