--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Oficina central</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Calificanos</a> </li>
+				<li class="nav-item"><a class="nav-link" href="./contacto.html">Contactanos</a> </li>
 		    </ul>
 		</div>
 	</nav>
