Se agrego tabla de precios

--- a/about.html
+++ b/about.html
@@ -39,10 +39,11 @@
   			<!--"collapse" y "navbar-collapse", nos va a indicar que es contenido colapsable, es decir, se va a ocultar para lo que es ya la forma responsive -->
 		    <ul class="navbar-nav mr-auto">
 		    	<!--Creamos una lista. mr-auto maneja los margenes -->
-				<li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+				<li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+				<li class="nav-item active"><a class="nav-link" href="#">Nosotros</a></li>
+				<li class="nav-item"><a class="nav-link" href="./precios.html">Precios</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Oficina central</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Contactanos</a> </li>
+				<li class="nav-item"><a class="nav-link" href="./contacto.html">Contactanos</a> </li>
 		    </ul>
 		</div>
 	</nav>
