--- a/precios.html
+++ b/precios.html
@@ -39,80 +39,87 @@
   			<!--"collapse" y "navbar-collapse", nos va a indicar que es contenido colapsable, es decir, se va a ocultar para lo que es ya la forma responsive -->
 		    <ul class="navbar-nav mr-auto">
 		    	<!--Creamos una lista. mr-auto maneja los margenes -->
-				<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li>
-				<li class="nav-item"><a class="nav-link" href="./precios.html">Precios</a></li>
+				<li class="nav-item active"><a class="nav-link" href="#">Precios</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Oficina central</a></li>
 				<li class="nav-item"><a class="nav-link" href="./contacto.html">Contactanos</a> </li>
 		    </ul>
 		</div>
 	</nav>
 
-	<!--Utilizando Flex -->
     <div class="jumbotron">
 		<h1>Hoteles</h1>
 	</div>
+	
 	<div class="container">
 		<nav aria-label="breadcrumb">
   			<ol class="breadcrumb">
-    			<li class="breadcrumb-item active" aria-current="page">Home</li>
+    			<li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+    			<li class="breadcrumb-item active" aria-current="page">Precios</li>
   			</ol>
 		</nav>
 
-		<div class="row">
-		    <div class="col-sm">
-		    	<h2>Bienvenidos</h2>
-				<p>Esperemos que encuentres el hotel adecuado para ti. Solo recomendamos los hoteles</p>
-		    </div>
-		    <div class="col-sm">
-		      	<h2>Acerca</h2>
-				<p>Esta es una pequeña empresa que recopila información de los mejores hoteles en diferentes lugares.</p>
-		    </div>
-		    <div class="col-sm">
-		      	<h2>Terminos y condiciones</h2>
-				<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
-		    </div>
-	  	</div>
-		
-		<div class="d-flex flex-wrap">
-			<!-- flex-wrap lo que hace es ajustar los elementos que vamos teniendo dentro del ancho del contenedor.-->
-		    <div class="card-hotel d-flex flex-column justify-content-between">
-		    	<div><h3>Hotel Santa Barbara</h3>
-				<p>Ubicado cerca de la ciudad de Medellín</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		    <div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel la Pintada</h3>
-				<p>Cerca la via Medellín - Cali</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		    <div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel Buena Aventura</h3>
-				<p>Cuenta con la mejor gastronomia</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		   	<div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel Barcelona</h3>
-				<p>Te sorprendera su arquitectura</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		   	<div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel San Pedro</h3>
-				<p>Encontraras las mejores fiestas</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		   	<div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel Rio de Janeiro</h3>
-				<p>Descubre la diversidad en los avarios</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-		   	<div class="card-hotel d-flex flex-column justify-content-between">
-		      	<div><h3>Hotel La estrella</h3>
-				<p>Conectate con la naturaleza</p></div>
-		    	<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p></div>
-		    </div>
-	  	</div>
-
+		<!-- Creaciónde tabla -->
+		<div class="table-responsive">
+		<!-- Al poner el responsive la tabla se conserva en un cuadro -->
+			<table class="table table-striped">
+				<thead class="thead-dark">
+					<th>Calidad</th>
+					<th>Pinamar</th>
+					<th>Mar del plata</th>
+					<th>San Clemente</th>
+					<th>Santa Teresita</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td><span class="oi oi-star"></span></td>
+						<td>$100</td>
+						<td>$110</td>
+						<td>$120</td>
+						<td>$130</td>
+					</tr>
+					<tr>
+						<td><span class="oi oi-star"></span>
+							<span class="oi oi-star"></span></td>
+						<td>$200</td>
+						<td>$210</td>
+						<td>$220</td>
+						<td>$230</td>
+					</tr>
+					<tr>
+						<td><span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span></td>
+						<td>3100</td>
+						<td>3110</td>
+						<td>3120</td>
+						<td>3130</td>
+					</tr>
+					<tr>
+						<td><span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span></td>
+						<td>4100</td>
+						<td>4110</td>
+						<td>4120</td>
+						<td>4130</td>
+					</tr>
+					<tr>
+						<td><span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span>
+							<span class="oi oi-star"></span></td>
+						<td>5100</td>
+						<td>5110</td>
+						<td>5120</td>
+						<td>5130</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 
 	<footer class="page-footer font-small pt-4">
@@ -150,7 +157,6 @@
 			<a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
 		</div>
 	</footer>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
