Se agregaron las imagenes

--- a/index - Modulo 2 con flex.html
+++ b/index - Modulo 2 con flex.html
@@ -74,11 +74,9 @@
 		    </div>
 	  	</div>
 		
-		<img src="imagenes/playa.jpg" class="im img-fluid" alt="Responsive image">
-
-		<div class="card-columns">
+		<div class="d-flex flex-wrap">
 			<!-- flex-wrap lo que hace es ajustar los elementos que vamos teniendo dentro del ancho del contenedor.-->
-		    <div class="card card-hotel justify-content-between ml-2">
+		    <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    <!--Luego de card podemos pensarlo como que está compuesto por tres partes, lo que sería un header encabezado, después el cuerpo o el body y el footer si queremos poner en la parte de abajo de la tarjeta. -->
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
@@ -87,11 +85,11 @@
 		    		<h5 class="card-title">Hotel Santa Barbara</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/1.jpg" alt="hotel img">
-					<p class="card-text">Ubicado cerca de la ciudad de Medellín</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Ubicado cerca de la ciudad de Medellín</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		    <div class="card card-hotel justify-content-between ml-2">
+		    <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span>
 		    	</div>
@@ -99,11 +97,11 @@
 		    		<h5 class="card-title">Hotel la Pintada</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/2.jpg" alt="hotel img">
-					<p class="card-text">Cerca la via Medellín - Cali</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Cerca la via Medellín - Cali</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		    <div class="card card-hotel justify-content-between ml-2">
+		    <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
@@ -111,11 +109,11 @@
 		    		<h5 class="card-title">Hotel Buena Aventura</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/3.jpg" alt="hotel img">
-					<p class="card-text">Cuenta con la mejor gastronomia</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Cuenta con la mejor gastronomia</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		    <div class="card card-hotel justify-content-between ml-2">
+		    <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
@@ -123,11 +121,11 @@
 		    		<h5 class="card-title">Hotel Barcelona</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/4.jpg" alt="hotel img">
-					<p class="card-text">Te sorprendera su arquitectura</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Te sorprendera su arquitectura</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		    <div class="card card-hotel justify-content-between ml-2">
+		    <div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
@@ -135,11 +133,11 @@
 		    		<h5 class="card-title">Hotel San Pedro</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/5.jpg" alt="hotel img">
-					<p class="card-text">Encontraras las mejores fiestas</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Encontraras las mejores fiestas</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		   	<div class="card card-hotel justify-content-between ml-2">
+		   	<div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
@@ -147,11 +145,11 @@
 		    		<h5 class="card-title">Hotel Rio de Janeiro</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/6.jpg" alt="hotel img">
-					<p class="card-text">Descubre la diversidad en los avarios</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Descubre la diversidad en los avarios</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
-		   	<div class="card card-hotel justify-content-between ml-2">
+		   	<div class="card card-hotel d-flex flex-column justify-content-between ml-2">
 		    	<div class="card-header">
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
@@ -159,8 +157,8 @@
 		    		<h5 class="card-title">Hotel La estrella</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/7.jpg" alt="hotel img">
-					<p class="card-text">Conectate con la naturaleza</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<p class="card-text">Conectate con la naturaleza</p></div>
+		    		<div><p><a class="btn btn-primary btn-lg" role="button">Reservar</a></p>
 		    	</div>
 		    </div>
 	  	</div>
