Se agrego un accordions y collapse

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     			<li class="breadcrumb-item active" aria-current="page">Home</li>
   			</ol>
 		</nav>
-
+		
 		<div class="row">
 		    <div class="col-sm">
 		    	<h2>Bienvenidos</h2>
@@ -73,8 +73,30 @@
 				<p>La empresa no se hace responsable sobre las reservas de los hoteles recomendados.</p>
 		    </div>
 	  	</div>
-		
+
 		<img src="imagenes/playa.jpg" class="im img-fluid" alt="Responsive image">
+
+		<!--Se agrega Collapse -->
+		<p>
+		  <a class="btn btn-info btn-block" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Historia del turismo</a>
+		  <button class="btn btn-info btn-block" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Beneficios del turismo</button>
+		</p>
+		<div class="row">
+		  	<div class="col">
+		    	<div class="collapse multi-collapse" id="multiCollapseExample1">
+		      		<div class="card card-body">
+		        		El turismo como tal, nace en el siglo XIX, como una consecuencia de la Revolución industrial, con desplazamientos cuya intención principal es el ocio, descanso, cultura, salud, negocios o relaciones familiares. Estos movimientos se diferencian por su finalidad de otros tipos de viajes motivados por guerras, movimientos migratorios, conquista, comercio, entre otros. No obstante el turismo tiene antecedentes históricos claros.
+		     		</div>
+		    	</div>
+		 	</div>
+		  	<div class="col">
+		    	<div class="collapse multi-collapse" id="multiCollapseExample2">
+		     		<div class="card card-body">
+		        	El turismo trae consigo tanto beneficios como costos económicos y no económicos para las comunidades receptoras. Además de los costos económicos, hay otras áreas que se impactan y que merece la pena analizar. Estas se relacionan con los beneficios que obtiene el viajero, como la aportación de los viajes de placer al descanso y la relajación, el beneficio educativo, la comprensión de otras y culturas, y el bienestar físico y mental para el viajero. btnInf
+		     		 </div>
+		    	</div>
+		  	</div>
+		</div>
 
 		<div class="card-columns">
 			<!-- flex-wrap lo que hace es ajustar los elementos que vamos teniendo dentro del ancho del contenedor.-->
@@ -88,7 +110,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/1.jpg" alt="hotel img">
 					<p class="card-text">Ubicado cerca de la ciudad de Medellín</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		    <div class="card card-hotel justify-content-between ml-2">
@@ -100,7 +122,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/2.jpg" alt="hotel img">
 					<p class="card-text">Cerca la via Medellín - Cali</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		    <div class="card card-hotel justify-content-between ml-2">
@@ -112,7 +134,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/3.jpg" alt="hotel img">
 					<p class="card-text">Cuenta con la mejor gastronomia</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		    <div class="card card-hotel justify-content-between ml-2">
@@ -124,7 +146,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/4.jpg" alt="hotel img">
 					<p class="card-text">Te sorprendera su arquitectura</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		    <div class="card card-hotel justify-content-between ml-2">
@@ -136,7 +158,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/5.jpg" alt="hotel img">
 					<p class="card-text">Encontraras las mejores fiestas</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		   	<div class="card card-hotel justify-content-between ml-2">
@@ -148,7 +170,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/6.jpg" alt="hotel img">
 					<p class="card-text">Descubre la diversidad en los avarios</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 		   	<div class="card card-hotel justify-content-between ml-2">
@@ -160,7 +182,7 @@
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/7.jpg" alt="hotel img">
 					<p class="card-text">Conectate con la naturaleza</p>
-					<a class="btn btn-primary btn-lg" role="button">Reservar</a>
+					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
 		    	</div>
 		    </div>
 	  	</div>
