--- a/index.html
+++ b/index.html
@@ -187,6 +187,38 @@
 		    </div>
 	  	</div>
 
+	  	<!--Utilizando Modal -->
+	  	<button type="button" class="btn btn-info btn-block btnModal" data-toggle="modal" data-target="#exampleModal" data-whatever="@">Quiero estar en la pagina</button>
+
+		<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="exampleModalLabel">Nuevo mensaje</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		        <form>
+		          <div class="form-group">
+		            <label for="recipient-name" class="col-form-label">Correo:</label>
+		            <input type="text" class="form-control" id="recipient-name">
+		          </div>
+		          <div class="form-group">
+		            <label for="message-text" class="col-form-label">Mensaje:</label>
+		            <textarea class="form-control" id="message-text"></textarea>
+		          </div>
+		        </form>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+		        <button type="button" class="btn btn-primary">Enviar mensaje</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
 	</div>
 
 	<footer class="page-footer font-small pt-4">
@@ -217,7 +249,8 @@
 						<p><span class="oi oi-phone footer-address-icon"></span>0180003333333</p>
 						<p><span class="oi oi-envelope-closed footer-address-icon"></span>hola@espero.esten.bien</p>
 					</div>
-				</div>
+			</div>
+
 
 		</div>
 		<div class="footer-copyright text-center py-3">© 2020 Copyright:
