--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
 		    		<span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span><span class="oi oi-star"></span>
 		    	</div>
 		    	<div class="card-body">
-		    		<h5 class="card-title">Hotel Santa Barbara</h5>
+		    		<!-- Uso de tooltips-->
+		    		<h5 class="card-title" data-toggle="tooltip" data-placament="top" title="Desayuno gratis para el primer dia">Hotel Santa Barbara</h5>
 		    		<h6 class="card-subtitle text-muted">Antioquia</h6>
 		    		<img class="card-img-top" src="imagenes/1.jpg" alt="hotel img">
 					<p class="card-text">Ubicado cerca de la ciudad de Medellín</p>
-					<a class="btn btn-primary btn-lg btnInf" role="button">Información</a>
+					<!-- Uso de popovers-->
+					<a class="btn btn-primary btn-lg btnInf" role="button" data-toggle="popover" data-placement="top" data-content="Incluye desayuno de bienvenida">Información</a>
 		    	</div>
 		    </div>
 		    <div class="card card-hotel justify-content-between ml-2">
@@ -269,7 +271,19 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script> -->
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
 
+    <!-- <script src="node_modules/popper.js/dist/umd/popper.min.js"></script> -->
+
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> -->
     <script src="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--Scrip para que funcione el tooltip -->
+    <script>
+    	$(function(){
+    		$("[data-toggle='tooltip']").tooltip();
+    		//Scrip para que funcione el popovers
+    		$("[data-toggle='popover']").popover();
+    	});
+    </script>
   </body>
 </html>
