--- a/index.html
+++ b/index.html
@@ -74,7 +74,35 @@
 		    </div>
 	  	</div>
 
-		<img src="imagenes/playa.jpg" class="im img-fluid" alt="Responsive image">
+		<!-- <img src="imagenes/playa.jpg" class="im img-fluid" alt="Responsive image"> -->
+
+		<!--Definicion del Carousel -->
+		<div id="carouselControl" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselControl" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselControl" data-slide-to="1"></li>
+				<li data-target="#carouselControl" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+			 		<img class="d-block w-100 im" src="imagenes/playa.jpg" alt="First slide">
+				</div>
+				<div class="carousel-item">
+			  		<img class="d-block w-100 im" src="imagenes/playa2.jpg" alt="Second slide">
+				</div>
+				<div class="carousel-item">
+			  		<img class="d-block w-100 im" src="imagenes/playa3.jpg" alt="Third slide">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselControl" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Anterior</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselControl" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Siguiente</span>
+			</a>
+		</div>
 
 		<!--Se agrega Collapse -->
 		<p>
@@ -283,6 +311,9 @@
     		$("[data-toggle='tooltip']").tooltip();
     		//Scrip para que funcione el popovers
     		$("[data-toggle='popover']").popover();
+    		$('.carousel').carousel({
+    			interval: 6000
+    		})
     	});
     </script>
   </body>
